--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "t2-a2",
   "private": true,
   "dependencies": {
-    "@rails/ujs": "^6.0.0",
-    "turbolinks": "^5.2.0",
+    "@rails/actioncable": "^6.0.0",
+    "@rails/actiontext": "^6.1.6",
     "@rails/activestorage": "^6.0.0",
-    "@rails/actioncable": "^6.0.0"
+    "@rails/ujs": "^6.0.0",
+    "trix": "^1.2.0",
+    "turbolinks": "^5.2.0"
   },
   "version": "0.1.0"
 }
